@@ -15,6 +15,8 @@ beginning of name. Expand ~user.
 
 Exposed signals via the new `signals-case` command, built upon `$&catch`.
 
+Allow raising a signal via the new `raise` command.
+
 Changed `$&catch` to check for unprocessed signals after executing body.
 
 Implemented `%catch` as the internal form of `catch`.
